--- a/app/src/main/res/layout/activity_android_me.xml
+++ b/app/src/main/res/layout/activity_android_me.xml
@@ -19,7 +19,7 @@
 
     <!-- LinearLayout for holding three Android-Me images -->
     <LinearLayout
-        android:id="@+id/android_me_linear_layout"
+        android:id="@+id/ll_android_me"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
@@ -30,17 +30,17 @@
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <FrameLayout
-            android:id="@+id/head"
+            android:id="@+id/fl_head"
             android:layout_width="match_parent"
             android:layout_height="180dp"/>
 
         <FrameLayout
-            android:id="@+id/body"
+            android:id="@+id/fl_body"
             android:layout_width="match_parent"
             android:layout_height="180dp"/>
 
         <FrameLayout
-            android:id="@+id/leg"
+            android:id="@+id/fl_leg"
             android:layout_width="match_parent"
             android:layout_height="180dp"/>
 
