--- a/app/src/main/res/layout/fragment_master_list.xml
+++ b/app/src/main/res/layout/fragment_master_list.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent" android:layout_width="match_parent"
-    android:id="@+id/gv_master"
-    android:numColumns="3"
-    android:horizontalSpacing="8dp"
-    android:verticalSpacing="8dp"
-    android:padding="16dp"
-    android:stretchMode="columnWidth"
-    android:gravity="center">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical">
 
-</GridView>
+    <GridView
+        android:id="@+id/gv_master"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_weight="9"
+        android:numColumns="3"
+        android:horizontalSpacing="8dp"
+        android:verticalSpacing="8dp"
+        android:padding="16dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center">
+    </GridView>
+
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="wrap_content" android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/btn_next"
+        android:gravity="center"
+        android:layout_gravity="end"
+        android:layout_margin="16dp"/>
+
+</LinearLayout>
